--- a/freight/templates/freight/partials/contracts_js_includes.html
+++ b/freight/templates/freight/partials/contracts_js_includes.html
@@ -2,7 +2,7 @@
 
 {% include 'bundles/moment-js.html' with locale=True %}
 {% include 'bundles/datatables-js.html' %}
+{% include 'bundles/filterdropdown-js.html' %}
 
 <script type="application/javascript" src="{% static 'freight/vendor/datatables/datetime.js' %}"></script>
-<script type="application/javascript" src="{% static 'js/filterDropDown/filterDropDown.min.js' %}"></script>
 <script type="application/javascript" src="{% static 'freight/js/contracts.js' %}"></script>
