--- a/freight/templates/freight/contracts_all.html
+++ b/freight/templates/freight/contracts_all.html
@@ -7,8 +7,16 @@
 
     <!-- Nav tabs -->
     <ul class="nav nav-tabs" role="tablist">
-        <li role="presentation" class="active"><a href="#active_contracts" aria-controls="active_contracts" role="tab" data-toggle="tab">Active</a></li>
-        <li role="presentation"><a href="#all_contracts" aria-controls="all_contracts" role="tab" data-toggle="tab">All</a></li>
+        <li role="presentation" class="active">
+            <a href="#active_contracts" aria-controls="active_contracts" role="tab" data-toggle="tab">
+                {% translate "Active" %}
+            </a>
+        </li>
+        <li role="presentation">
+            <a href="#all_contracts" aria-controls="all_contracts" role="tab" data-toggle="tab">
+                {% translate "All" %}
+            </a>
+        </li>
     </ul>
 
     <div class="panel panel-default panel-tab">
