--- a/freight/templates/freight/calculator.html
+++ b/freight/templates/freight/calculator.html
@@ -15,8 +15,30 @@
                         <h3 class="panel-title">{% translate "Calculator" %}</h3>
                     </div>
                     <div class="panel-body">
-                        {% if has_pricing %}
-                            {{ form|bootstrap }}
+                            {% if has_pricing %}
+                                {% if form.non_field_errors %}
+                                    <div class="alert alert-danger" role="alert">
+                                        {% for error in form.non_field_errors %}
+                                            {{ error }}
+                                        {% endfor %}
+                                    </div>
+                            {% endif %}
+                            {{ form.source.errors }}
+                            {{ form.source }}
+
+                            {{ form.pricing|bootstrap }}
+                            {{ form.volume|bootstrap }}
+                            <div class="form-group">
+                                <label class="control-label" for="id_collateral">{{ form.collateral.label }}</label>
+                                <div class=" ">
+                                    <input type="number" name="collateral" value="{{ form.collateral.value }}" class="form-control" id="id_collateral">
+                                    <button class="btn btn-primary" type="button" name="btn_bill" style="margin-top: 5px">{% trans "Convert to Billion" %}</button>
+                                    <button class="btn btn-primary" type="button" name="btn_mill" style="margin-top: 5px">{% trans "Convert to Million" %}</button>
+                                    <p class="help-block">
+                                        {{ form.collateral.help_text }}
+                                    </p>
+                                </div>
+                            </div>
                             <br>
                             <p><strong>{% translate "Reward" %}</strong></p>
                             <h2 id="text_price">
@@ -189,14 +211,25 @@
                                     </span>
                                 </dd>
 
-                                <dt>{% translate "Collateral:" %}</dt>
-                                <dd>
-                                    {{ collateral|formatnumber:"0"|default_if_none:"???" }}
-                                    &nbsp;{% translate "ISK" %}
-                                    <span class="copy_to_clipboard" data-text="{{ collateral }}">
-                                        &nbsp;&nbsp;<i class="far fa-copy"></i></span>
-                                    </span>
-                                </dd>
+                                {% if not collateral_zero %}
+                                    <dt>{% translate "Collateral:" %}</dt>
+                                    <dd>
+                                        {{ collateral|formatnumber:"0"|default_if_none:"???" }}
+                                        &nbsp;{% translate "ISK" %}
+                                        <span class="copy_to_clipboard" data-text="{{ collateral }}">
+                                            &nbsp;&nbsp;<i class="far fa-copy"></i></span>
+                                        </span>
+                                    </dd>
+                                {% else %}
+                                    <dt>{% translate "Collateral:" %}</dt>
+                                    <dd>
+                                        0
+                                        &nbsp;{% translate "ISK" %}
+                                        <span class="copy_to_clipboard" data-text="{{ collateral }}">
+                                            &nbsp;&nbsp;<i class="far fa-copy"></i></span>
+                                        </span>
+                                    </dd>
+                                {% endif %}
 
                                 {% if pricing.days_to_expire %}
                                     <dt>{% translate "Expiration:" %}</dt>
@@ -277,6 +310,18 @@
             $('.copy_to_clipboard').on('click', function (event) {
                 const text = event.currentTarget.getAttribute("data-text")
                 copyToClipboard(text)
+            });
+
+            $('button[name="btn_bill"]').on('click', function (event) {
+                let collateral = $('input[name="collateral"]').val();
+                let convert = collateral + '000000000';
+                $('input[name="collateral"]').val(convert);
+            });
+
+            $('button[name="btn_mill"]').on('click', function (event) {
+                let collateral = $('input[name="collateral"]').val();
+                let convert = collateral + '000000';
+                $('input[name="collateral"]').val(convert);
             });
         });
     </script>
